--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 header{
-    padding: 15px 0px 15px 613px;
+    text-align: center;
     background: black;
     color: white;
 }
